--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,3 @@
-
-
 @import url('https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:wght@400;700&display=swap');
 body {
     align-items: center;
@@ -45,6 +43,28 @@ li {
     grid-template-columns: 70% 30%;
 
 }
+
+.forecast-container {
+    display: grid;
+    grid-template-rows: auto auto;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 16px;
+    padding: 16px;
+}
+
+.forecast-box {
+    background-color: #eee;
+    border: 2px solid #666;
+    border-radius: 8px;
+    padding: 16px;
+    text-align: center;
+}
+
+
 .weather-box {
     align-items: center;
     display: flex;
@@ -55,6 +75,71 @@ li {
 .weather-box-item {
     margin-bottom: 10px;
 }
+
+
+
+/* #temp-conversion-form {
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  
+  label[for="temp-to-convert"], label[for="to-c"], label[for="to-f"] {
+    margin-bottom: 1rem;
+    font-weight: bold;
+  }
+  
+  #temp-to-convert {
+    padding: 0.5rem;
+    margin-bottom: 1rem;
+  }
+  
+  #to-c, #to-f {
+    margin-right: 1rem;
+  }
+  
+  #conversion-result {
+    margin-top: 1rem;
+    font-weight: bold;
+  }
+   */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
